refactor(kitchenpos - calculator): 메뉴 테스트 수정/ 예외테스트 추가