@@ -2,77 +2,54 @@ package kitchenpos.application;
 
 import kitchenpos.domain.*;
 import kitchenpos.infra.PurgomalumClient;
+import kitchenpos.testfixture.*;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+import java.util.NoSuchElementException;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @ExtendWith(MockitoExtension.class)
 class MenuServiceTest {
 
-    @Mock
-    MenuRepository menuRepository;
+    MenuRepository menuRepository = new InMemoryMenuRepository();
 
-    @Mock
-    MenuGroupRepository menuGroupRepository;
+    MenuGroupRepository menuGroupRepository = new InMemoryMenuGroupRepository();
 
-    @Mock
-    ProductRepository productRepository;
 
-    @Mock
-    PurgomalumClient purgomalumClient;
+    ProductRepository productRepository = new InMemoryProductRepository();
 
-    @InjectMocks
+    PurgomalumClient purgomalumClient = new FakePurgomalumClient();
+
     MenuService menuService;
+
+    @BeforeEach
+    void setUp() {
+        menuService = new MenuService(menuRepository, menuGroupRepository, productRepository, purgomalumClient);
+    }
 
     @Test
     void create() {
 
         //given
-        Menu request = new Menu();
-        request.setName("menu-name");
-        request.setPrice(BigDecimal.valueOf(40000));
+        MenuGroup menuGroup = MenuGroupTestFixture.createMenuGroup(UUID.randomUUID(), "치킨류");
+        menuGroupRepository.save(menuGroup);
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        productRepository.save(product);
 
-        MenuGroup menuGroup = new MenuGroup();
-        menuGroup.setName("menu-group-name");
-        menuGroup.setId(UUID.randomUUID());
-
-        Product product = new Product();
-        product.setPrice(BigDecimal.valueOf(40000));
-
-        MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setQuantity(1L);
-        menuProduct.setProduct(product);
-
+        Menu request = MenuTestFixture.createMenuRequest("후라이드치킨", 18000L, true, product);
+        request.setMenuGroup(menuGroup);
         request.setMenuGroupId(menuGroup.getId());
-        request.setMenuProducts(Arrays.asList(menuProduct));
 
-        given(menuGroupRepository.findById(menuGroup.getId()))
-                .willReturn(Optional.of(menuGroup));
-
-        given(productRepository.findAllByIdIn(any()))
-                .willReturn(Arrays.asList(product));
-
-        given(productRepository.findById(any()))
-                .willReturn(Optional.of(product));
-
-        given(purgomalumClient.containsProfanity(any()))
-                .willReturn(false);
-
-        given(menuRepository.save(any()))
-                .willAnswer(invocation -> invocation.getArgument(0));
-
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        request.setMenuProducts(List.of(menuProduct));
         //when
         Menu response = menuService.create(request);
 
@@ -84,29 +61,93 @@ class MenuServiceTest {
     }
 
     @Test
+    void mustHaveMenuGroup() {
+        //given
+        MenuGroup menuGroup = MenuGroupTestFixture.createMenuGroup(UUID.randomUUID(), "치킨류");
+        menuGroupRepository.save(menuGroup);
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        productRepository.save(product);
+
+        Menu request = MenuTestFixture.createMenuRequest("후라이드치킨", 18000L, true, product);
+
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        request.setMenuProducts(List.of(menuProduct));
+
+        //when then
+        assertThrows(NoSuchElementException.class, () -> menuService.create(request));
+
+    }
+
+    @Test
+    void mustHaveProduct() {
+        //given
+        MenuGroup menuGroup = MenuGroupTestFixture.createMenuGroup(UUID.randomUUID(), "치킨류");
+        menuGroupRepository.save(menuGroup);
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        productRepository.save(product);
+
+        Menu request = MenuTestFixture.createMenuRequest("후라이드치킨", 18000L, true, new Product());
+        request.setMenuGroup(menuGroup);
+        request.setMenuGroupId(menuGroup.getId());
+
+        //when then
+        assertThrows(IllegalArgumentException.class, () -> menuService.create(request));
+    }
+
+    @Test
+    void mustSameSizeOfProduct() {
+        //given
+        MenuGroup menuGroup = MenuGroupTestFixture.createMenuGroup(UUID.randomUUID(), "치킨류");
+        menuGroupRepository.save(menuGroup);
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        productRepository.save(product);
+        Product product2 = ProductTestFixture.createProduct(UUID.randomUUID(), "양념치킨", 19000L);
+
+        Menu request = MenuTestFixture.createMenuRequest("후라이드치킨", 18000L, true, new Product());
+        request.setMenuGroup(menuGroup);
+        request.setMenuGroupId(menuGroup.getId());
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        MenuProduct menuProduct2 = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product2);
+        request.setMenuProducts(List.of(menuProduct, menuProduct2));
+
+        //when then
+        assertThrows(IllegalArgumentException.class, () -> menuService.create(request));
+    }
+
+
+    @Test
     void changePrice() {
         //given
-        Menu request = new Menu();
-        request.setId(UUID.randomUUID());
-        request.setPrice(BigDecimal.valueOf(30000));
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        Menu menu = MenuTestFixture.createMenu(UUID.randomUUID(), "후라이드치킨", 18000L, true, product);
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        menu.setMenuProducts(List.of(menuProduct));
+        productRepository.save(product);
+        menuRepository.save(menu);
 
-        Product product = new Product();
-        product.setPrice(BigDecimal.valueOf(40000));
+        Menu request = MenuTestFixture.createMenu(menu.getId(), menu.getName(), 17000L, menu.isDisplayed(), product);
+        request.setMenuProducts(menu.getMenuProducts());
 
-        MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setQuantity(1L);
-        menuProduct.setProduct(product);
-
-
-        Menu menu = new Menu();
-        menu.setPrice(BigDecimal.valueOf(40000));
-        menu.setMenuProducts(Arrays.asList(menuProduct));
 
         //when
         Menu response = menuService.changePrice(request.getId(), request);
 
         //then
-        assertEquals(BigDecimal.valueOf(30000), response.getPrice());
+        assertEquals(BigDecimal.valueOf(17000), response.getPrice());
+
+    }
+
+    @Test
+    void canNotMinusPrice() {
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 18000L);
+        Menu menu = MenuTestFixture.createMenu(UUID.randomUUID(), "후라이드치킨", 18000L, true, product);
+        productRepository.save(product);
+        menuRepository.save(menu);
+
+        Menu request = MenuTestFixture.createMenu(menu.getId(), menu.getName(), -1000L, menu.isDisplayed(), product);
+
+        //when then
+        assertThrows(IllegalArgumentException.class, () -> menuService.changePrice(request.getId(), request));
 
     }
 
@@ -114,41 +155,39 @@ class MenuServiceTest {
     void display() {
 
         //given
-        Product product = new Product();
-        product.setPrice(BigDecimal.valueOf(20000));
-
-        MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setQuantity(1L);
-        menuProduct.setProduct(product);
-
-        Menu request = new Menu();
-        request.setId(UUID.randomUUID());
-        request.setMenuProducts(Arrays.asList(menuProduct));
-        request.setPrice(BigDecimal.valueOf(20000));
-
-
-        given(menuRepository.findById(any()))
-                .willReturn(Optional.of(request));
-
-        //when
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 11000L);
+        UUID menuId = UUID.randomUUID();
+        Menu request = MenuTestFixture.createMenu(menuId, "menu1", 10000L, true, product);
+        MenuProduct menuProduct = MenuProductTestFixture.createMenuProductRequest(1L, 1L, product);
+        request.setMenuProducts(List.of(menuProduct));
+        menuRepository.save(request);
+        // when
         Menu response = menuService.display(request.getId());
 
-        //then
+        // then
         assertEquals(true, response.isDisplayed());
 
+    }
+
+    @Test
+    void mustHaveMenu() {
+
+        //given
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 11000L);
+        UUID menuId = UUID.randomUUID();
+        Menu request = MenuTestFixture.createMenu(menuId, "menu1", 10000L, true, product);
+        // when then
+        assertThrows(NoSuchElementException.class, () -> menuService.display(menuId));
     }
 
     @Test
     void hide() {
 
         //given
+        Product product = ProductTestFixture.createProduct(UUID.randomUUID(), "후라이드치킨", 11000L);
         UUID menuId = UUID.randomUUID();
-        Menu request = new Menu();
-        request.setId(menuId);
-        request.setDisplayed(true);
-
-        given(menuRepository.findById(request.getId())).willReturn(Optional.of(request));
-
+        Menu request = MenuTestFixture.createMenu(menuId, "menu1", 10000L, true, product);
+        menuRepository.save(request);
         // when
         Menu response = menuService.hide(request.getId());
 
@@ -161,22 +200,17 @@ class MenuServiceTest {
     void findAll() {
 
         //given
-        Menu menu1 = new Menu();
-        menu1.setId(UUID.randomUUID());
-        menu1.setDisplayed(true);
+        Menu menu1 = MenuTestFixture.createMenu(UUID.randomUUID(), "menu1", 10000L, true, new Product());
 
-        Menu menu2 = new Menu();
-        menu2.setId(UUID.randomUUID());
-        menu2.setDisplayed(true);
-
-        given(menuRepository.findAll()).willReturn(Arrays.asList(menu1, menu2));
+        Menu menu2 = MenuTestFixture.createMenu(UUID.randomUUID(), "menu2", 14000L, true, new Product());
+        menuRepository.save(menu1);
+        menuRepository.save(menu2);
 
         //when
         List<Menu> response = menuService.findAll();
 
         //then
         assertEquals(2, response.size());
-        assertEquals(Arrays.asList(menu1, menu2), response);
     }
 
 }
